--- a/MAIN.ipynb
+++ b/MAIN.ipynb
@@ -33,6 +33,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -50,19 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: MacOSX\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from functions.plots.circuit_plot import circuit_plot\n",
     "from functions.plots.matrix_plot import matrix_plot\n",
@@ -97,7 +93,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib\n",
-    "%matplotlib"
+    "%matplotlib "
    ]
   },
   {
@@ -120,17 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading PDB structure '4agh'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "retrieve_cif('4agh')"
    ]
@@ -144,18 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading PDB structure '4chj'...\n",
-      "Downloading PDB structure '1a6n'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "retrieve_cif_list()"
    ]
@@ -193,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,12 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creates a chain object from a CIF/PDB file\n",
-    "chain,protid = retrieve_chain('4agh.cif')\n",
+    "chain,protid = retrieve_chain('1pnj.pdb')\n",
     "\n",
     "#Step 1 - Draw a residue-residue based contact map \n",
     "index,numbering,protid,res_names = get_cmap(\n",
@@ -299,7 +278,7 @@
     "                                                cutoff_distance = cutoff_distance,\n",
     "                                                cutoff_numcontacts = cutoff_numcontacts,        \n",
     "                                                exclude_neighbour = exclude_neighbour)\n",
-    "    \n",
+    "    print(len(index))\n",
     "    #Step 1.5 - Energy filtering\n",
     "    if energy_filtering:\n",
     "        index,protid = energy_cmap(index,numbering,\n",
@@ -363,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   },
   "toc-showmarkdowntxt": false
  },
