--- a/MAIN.ipynb
+++ b/MAIN.ipynb
@@ -54,16 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: MacOSX\n"
+     ]
+    }
+   ],
    "source": [
     "from functions.plots.circuit_plot import circuit_plot\n",
     "from functions.plots.matrix_plot import matrix_plot\n",
     "from functions.plots.stats_plot import stats_plot\n",
     "from functions.plots.matrix_plot_model import matrix_plot_model\n",
+    "from functions.plots.local_topology_plot import local_topology_plot\n",
     "\n",
     "from functions.calculating.get_cmap import get_cmap\n",
     "from functions.calculating.get_matrix import get_matrix\n",
@@ -75,6 +84,7 @@
     "from functions.calculating.glob_score import glob_score\n",
     "from functions.calculating.length_filter import length_filter\n",
     "from functions.calculating.contact_order import contact_order\n",
+    "from functions.calculating.local_ct import local_ct\n",
     "\n",
     "from functions.importing.retrieve_chain import retrieve_chain\n",
     "from functions.importing.retrieve_cif import retrieve_cif\n",
@@ -172,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,6 +501,179 @@
     "circuit_plot(index,protid,numbering)\n",
     "matrix_plot_model(mat,protid)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <center> Local Circuit Topology </center>\n",
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "chain,protid = retrieve_chain('1pnj.pdb')\n",
+    "index,numbering,protid,res_names = get_cmap(\n",
+    "                                            chain,\n",
+    "                                            cutoff_distance = cutoff_distance,\n",
+    "                                            cutoff_numcontacts = cutoff_numcontacts,        \n",
+    "                                            exclude_neighbour = exclude_neighbour)\n",
+    "\n",
+    "mat, psc = get_matrix(index,protid)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "local_topology_plot() Plots the local circuit topology containing all contacts related to a specific residue ID and relationship type (X,S,P,IP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Res_id = 30\n",
+    "contact_type = 'X'\n",
+    "\n",
+    "local_topology_plot(index,mat,numbering,protid,Res_id,contact_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "local_ct() Provides an overview of the number of each type of contact related to each residue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 1: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 2: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 3: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 4: {'P': 60, 'IP': 0, 'X': 2, 'S': 0},\n",
+       " 5: {'P': 24, 'IP': 2, 'X': 36, 'S': 22},\n",
+       " 6: {'P': 57, 'IP': 1, 'X': 4, 'S': 0},\n",
+       " 7: {'P': 58, 'IP': 8, 'X': 26, 'S': 23},\n",
+       " 8: {'P': 52, 'IP': 13, 'X': 23, 'S': 27},\n",
+       " 9: {'P': 47, 'IP': 19, 'X': 27, 'S': 27},\n",
+       " 10: {'P': 41, 'IP': 10, 'X': 17, 'S': 0},\n",
+       " 11: {'P': 6, 'IP': 23, 'X': 4, 'S': 29},\n",
+       " 12: {'P': 34, 'IP': 11, 'X': 17, 'S': 0},\n",
+       " 13: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 14: {'P': 5, 'IP': 25, 'X': 3, 'S': 29},\n",
+       " 15: {'P': 4, 'IP': 27, 'X': 5, 'S': 31},\n",
+       " 16: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 17: {'P': 2, 'IP': 30, 'X': 4, 'S': 31},\n",
+       " 18: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 19: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 20: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 21: {'P': 22, 'IP': 12, 'X': 27, 'S': 1},\n",
+       " 22: {'P': 22, 'IP': 31, 'X': 26, 'S': 33},\n",
+       " 23: {'P': 18, 'IP': 30, 'X': 30, 'S': 33},\n",
+       " 24: {'P': 2, 'IP': 27, 'X': 4, 'S': 29},\n",
+       " 25: {'P': 5, 'IP': 26, 'X': 3, 'S': 29},\n",
+       " 26: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 27: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 28: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 29: {'P': 15, 'IP': 28, 'X': 35, 'S': 36},\n",
+       " 30: {'P': 8, 'IP': 19, 'X': 14, 'S': 27},\n",
+       " 31: {'P': 30, 'IP': 27, 'X': 37, 'S': 38},\n",
+       " 32: {'P': 17, 'IP': 26, 'X': 38, 'S': 37},\n",
+       " 33: {'P': 16, 'IP': 26, 'X': 36, 'S': 36},\n",
+       " 34: {'P': 13, 'IP': 7, 'X': 20, 'S': 22},\n",
+       " 35: {'P': 36, 'IP': 6, 'X': 25, 'S': 38},\n",
+       " 36: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 37: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 38: {'P': 1, 'IP': 27, 'X': 1, 'S': 35},\n",
+       " 39: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 40: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 41: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 42: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 43: {'P': 0, 'IP': 27, 'X': 0, 'S': 35},\n",
+       " 44: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 45: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 46: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 47: {'P': 0, 'IP': 24, 'X': 7, 'S': 31},\n",
+       " 48: {'P': 35, 'IP': 26, 'X': 29, 'S': 38},\n",
+       " 49: {'P': 16, 'IP': 10, 'X': 16, 'S': 20},\n",
+       " 50: {'P': 0, 'IP': 26, 'X': 2, 'S': 34},\n",
+       " 51: {'P': 13, 'IP': 15, 'X': 14, 'S': 20},\n",
+       " 52: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 53: {'P': 0, 'IP': 24, 'X': 7, 'S': 31},\n",
+       " 54: {'P': 0, 'IP': 26, 'X': 2, 'S': 34},\n",
+       " 55: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 56: {'P': 12, 'IP': 21, 'X': 13, 'S': 23},\n",
+       " 57: {'P': 9, 'IP': 23, 'X': 11, 'S': 23},\n",
+       " 58: {'P': 7, 'IP': 26, 'X': 8, 'S': 23},\n",
+       " 59: {'P': 5, 'IP': 28, 'X': 7, 'S': 23},\n",
+       " 60: {'P': 27, 'IP': 36, 'X': 38, 'S': 30},\n",
+       " 61: {'P': 8, 'IP': 34, 'X': 30, 'S': 30},\n",
+       " 62: {'P': 6, 'IP': 17, 'X': 26, 'S': 13},\n",
+       " 63: {'P': 9, 'IP': 15, 'X': 30, 'S': 8},\n",
+       " 64: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 65: {'P': 0, 'IP': 32, 'X': 2, 'S': 28},\n",
+       " 66: {'P': 2, 'IP': 31, 'X': 4, 'S': 28},\n",
+       " 67: {'P': 4, 'IP': 29, 'X': 7, 'S': 26},\n",
+       " 68: {'P': 17, 'IP': 27, 'X': 33, 'S': 23},\n",
+       " 69: {'P': 22, 'IP': 24, 'X': 34, 'S': 23},\n",
+       " 70: {'P': 20, 'IP': 19, 'X': 24, 'S': 46},\n",
+       " 71: {'P': 12, 'IP': 16, 'X': 12, 'S': 22},\n",
+       " 72: {'P': 13, 'IP': 15, 'X': 14, 'S': 20},\n",
+       " 73: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 74: {'P': 34, 'IP': 11, 'X': 17, 'S': 0},\n",
+       " 75: {'P': 37, 'IP': 14, 'X': 18, 'S': 45},\n",
+       " 76: {'P': 42, 'IP': 9, 'X': 16, 'S': 0},\n",
+       " 77: {'P': 45, 'IP': 10, 'X': 26, 'S': 20},\n",
+       " 78: {'P': 51, 'IP': 6, 'X': 15, 'S': 0},\n",
+       " 79: {'P': 52, 'IP': 3, 'X': 7, 'S': 0},\n",
+       " 80: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 81: {'P': 60, 'IP': 1, 'X': 4, 'S': 0},\n",
+       " 82: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 83: {'P': 58, 'IP': 1, 'X': 25, 'S': 16},\n",
+       " 84: {'P': 0, 'IP': 0, 'X': 0, 'S': 0},\n",
+       " 85: {'P': 0, 'IP': 0, 'X': 0, 'S': 0}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_ct(index,mat,numbering)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
